--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -24,4 +24,12 @@
     <filter-name>charsetEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <filter>
+    <filter-name>urlFilter</filter-name>
+    <filter-class>util.urlFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>urlFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
